# ThermaNewt

./: .gitignore  README.md  pyproject.toml  setup.py
Data_Preperation_Scripts/: thermal_data_analysis.ipynb
example_scripts/: Sub_Model_Vizualization.ipynb  rattle-newton-analysis.ipynb
post-simulation-analysis/: Data_pipeline_2.ipynb  eval_Ml.ipynb  ibutton_main_database.ipynb  ni_parameters_MMSE.csv  parameter_estimation.ipynb  parameters_MMSE.csv  rf_pipeline.py  rnn_pipeline.py  time-series-measures_&_Thermastats.ipynb
post-simulation-analysis/ml_pipeline/: non_imp_rf_pipeline.py  non_imp_rnn_pipeline.py  rf_i15.job  rf_ni.job  rf_pipeline.py  rnn_i15.job  rnn_ni.job  rnn_pipeline.py
post-simulation-analysis/ml_pipeline/Data/: ni_parameters_MMSE.csv  ni_parameters_MMSE_old.csv  parameters_MMSE.csv  validation.csv
src/ThermaNewt/: sim_snake_tb.py
src/rattle_newton/: sim_snake_tb.py
tests/: newton_tests.py
